kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: SERVICE_NAME
  labels:
    app: SERVICE_NAME
spec:
  type: ClusterIP
  selector:
    app: SERVICE_NAME
  ports:
    - port: 80
      targetPort: 8080
